feat:delete firstpage.jpg from project and add body selector in CSS

--- a/style.css
+++ b/style.css
@@ -8,3 +8,8 @@ main{
     width: 100%;
     margin:  0 auto;
 }
+body{
+    background-image: url(/mokoProject/img/firstpage.jpg);
+    background-repeat: no-repeat;
+    background-size: 100%;
+}
