feat: add a new bg image finish style for form and main also html tegs

--- a/style.css
+++ b/style.css
@@ -25,12 +25,19 @@ main {
 body {
     background-color: rgba(205, 202, 239, 0.8);
     height: 100vh;
+    background-image: url(/mokoProject/img/pagebackground.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center center;
+    position: relative;
+    z-index: 900;
 }
 
 form {
     position: absolute;
-    right: 200px;
-    bottom: 30%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    top: 50%;
     display: flex;
     flex-direction: column;
     width: 400px;
@@ -39,12 +46,14 @@ form {
     text-align: center;
     align-items: center;
     gap: 20px;
-    box-shadow: 0 4px 16px white;
-    background-color: #ccc;
+    box-shadow: 0 4px 16px black;
+    background-color:rgba(58, 4, 169, 0.3);
     justify-content: center;
     font-family: sans-serif;
     letter-spacing: 1px;
     height: 400px;
+    z-index: -2131;
+
 }
 
 .form__group {
@@ -63,6 +72,8 @@ form {
 label {
     width: 80px; 
     text-align: right;
+    font-weight: bold;
+    color: white;
 }
 
 input {
@@ -74,6 +85,7 @@ input {
 }
 .form__title{
     padding-bottom: 30px;
+    color: white;
 }
 
 button{
@@ -83,4 +95,14 @@ button{
     height: 30px;
     text-align: center;
     margin-left: 10px;
+    background-color: rgba(58, 4, 169, 0.86);
+    color: white;
+    border: none;
+    border-radius: 5px;
+    letter-spacing: 1px;
+}
+button:hover{
+    border:none;
+    background-color: rgba(58, 4, 169, 0.70);
+   
 }
