--- a/style.css
+++ b/style.css
@@ -16,26 +16,24 @@ main {
     background-size: cover;
 }
 
-.img {
+img {
     position: absolute;
-    left: 20%;
+    left: 10%;
     bottom: 20%;
+    width: 700px;
+    height: 500px;
+    border-radius: 10px;
 }
 
 body {
-    background-color: rgba(205, 202, 239, 0.8);
-    height: 100vh;
-    background-image: url(/mokoProject/img/pagebackground.jpg);
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center center;
-    position: relative;
-    z-index: 900;
+   background-image: url(/mokoProject/img/first\ background.jpg);
+   background-size: cover;
+   background-repeat: no-repeat;
 }
 
 form {
     position: absolute;
-    left: 50%;
+    left: 80%;
     transform: translate(-50%,-50%);
     top: 50%;
     display: flex;
@@ -47,7 +45,7 @@ form {
     align-items: center;
     gap: 20px;
     box-shadow: 0 4px 16px black;
-    background-color:rgba(58, 4, 169, 0.3);
+    background-color:rgba(58, 4, 169, 0.5);
     justify-content: center;
     font-family: sans-serif;
     letter-spacing: 1px;
@@ -105,4 +103,8 @@ button:hover{
     border:none;
     background-color: rgba(58, 4, 169, 0.70);
    
+}
+
+form:hover{
+    background-color:rgba(58, 4, 169, 0.3);
 }
